feat: Refactor resource management functionality